--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "free-ai-code-reviewer",
 	"displayName": "Free AI Code Reviewer",
-	"description": "Free AI-powered code review extension for VS Code with OpenRouter, Gemini, and custom AI providers",
+	"description": "Free AI-powered code review extension for VS Code with OpenAI, OpenRouter, Gemini, and custom AI providers",
 	"version": "1.0.0",
 	"publisher": "free-ai-code-reviewer",
 	"icon": "free_ai_reviewer_buble_main.png",
@@ -21,6 +21,7 @@
 	"keywords": [
 		"ai",
 		"code review",
+		"openai",
 		"openrouter",
 		"gemini",
 		"code quality",
@@ -39,11 +40,12 @@
 				"freeAICodeReviewer.provider": {
 					"type": "string",
 					"enum": [
+						"openai",
 						"openrouter",
 						"gemini",
 						"custom"
 					],
-					"default": "openrouter",
+					"default": "openai",
 					"description": "AI provider to use for code review"
 				},
 				"freeAICodeReviewer.model": {
@@ -60,6 +62,11 @@
 					"type": "object",
 					"default": {},
 					"description": "Custom headers for API requests (for custom provider)"
+				},
+				"freeAICodeReviewer.apiKey.openai": {
+					"type": "string",
+					"default": "",
+					"description": "API key for OpenAI provider (stored securely)"
 				},
 				"freeAICodeReviewer.apiKey.openrouter": {
 					"type": "string",
